--- a/src/has/AddRooms.form
+++ b/src/has/AddRooms.form
@@ -117,7 +117,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\MAHANKALI SAKETH\Desktop\Room.jpg"/>
+          <Image iconType="3" name="/has/Room.jpg"/>
         </Property>
       </Properties>
       <Constraints>
