--- a/src/has/ChangeUAP.form
+++ b/src/has/ChangeUAP.form
@@ -168,7 +168,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\MAHANKALI SAKETH\Desktop\background3.jpg"/>
+          <Image iconType="3" name="/has/background3.jpg"/>
         </Property>
       </Properties>
       <Constraints>
