--- a/src/has/Frequency.form
+++ b/src/has/Frequency.form
@@ -112,7 +112,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\MAHANKALI SAKETH\Desktop\frequency.jpg"/>
+          <Image iconType="3" name="/has/frequency.jpg"/>
         </Property>
       </Properties>
       <Constraints>
@@ -124,7 +124,7 @@
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\MAHANKALI SAKETH\Desktop\background3.jpg"/>
+          <Image iconType="3" name="/has/background3.jpg"/>
         </Property>
       </Properties>
       <Constraints>
