--- a/src/has/Login.form
+++ b/src/has/Login.form
@@ -66,7 +66,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JPasswordField" name="t2">
+    <Component class="javax.swing.JTextField" name="text">
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="120" y="210" width="140" height="30"/>
@@ -129,7 +129,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\MAHANKALI SAKETH\Desktop\Hotel1.jpg"/>
+          <Image iconType="3" name="/has/Hotel1.jpg"/>
         </Property>
       </Properties>
       <Constraints>
