--- a/src/has/ManagerFunctions2.form
+++ b/src/has/ManagerFunctions2.form
@@ -51,7 +51,7 @@
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\MAHANKALI SAKETH\Desktop\manager.png"/>
+          <Image iconType="3" name="/has/manager.png"/>
         </Property>
       </Properties>
       <Constraints>
@@ -161,7 +161,7 @@
           <Color blue="ff" green="ff" red="33" type="rgb"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\MAHANKALI SAKETH\Desktop\Clasical-Gold-Background.jpg"/>
+          <Image iconType="3" name="/has/Clasical-Gold-Background.jpg"/>
         </Property>
       </Properties>
       <Constraints>
