--- a/src/has/PlaceOrder.form
+++ b/src/has/PlaceOrder.form
@@ -137,7 +137,7 @@
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\MAHANKALI SAKETH\Desktop\Order.jpg"/>
+          <Image iconType="3" name="/has/Order.jpg"/>
         </Property>
       </Properties>
       <Constraints>
@@ -149,7 +149,7 @@
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\MAHANKALI SAKETH\Desktop\background3.jpg"/>
+          <Image iconType="3" name="/has/background3.jpg"/>
         </Property>
       </Properties>
       <Constraints>
