--- a/src/has/UpdateTariff.form
+++ b/src/has/UpdateTariff.form
@@ -199,7 +199,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\MAHANKALI SAKETH\Desktop\tariffs.png"/>
+          <Image iconType="3" name="/has/tariffs.png"/>
         </Property>
       </Properties>
       <Constraints>
@@ -253,7 +253,7 @@
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\MAHANKALI SAKETH\Desktop\background2.jpeg"/>
+          <Image iconType="3" name="/has/background2.jpeg"/>
         </Property>
       </Properties>
       <Constraints>
